<resources>
    <string name="app_name">Airport Meteo</string>
    <string name="search_hint">ICAO code</string>
    <string name="title_activity_airport">AirportActivity</string>
    <string name="title_home">Home</string>
    <string name="nav_station">Airport</string>
    <string name="nav_meteo">Weather</string>
    <string name="nav_map">Map</string>
    <string name="button_search">Submit</string>
    <string name="delete">Delete ?</string>
    <string name="confirm_delete">Are you sure you want to delete this airport ?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="write">Please enter an ICAO airport code to add it</string>
    <string name="code_not_valid">Please enter a valid ICAO code</string>
    <string name="no_airport">Unexisting airport</string>
    <string name="error_request">No response from API</string>
    <string name="already">This airport is already in the list</string>
    <string name="info">Informations</string>
    <string name="IATA">IATA</string>
    <string name="ICAO">ICAO</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="sts_type">Type</string>
    <string name="elevation">Elevation</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="runways">Runways</string>
    <string name="id">Id</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="surface">Surface</string>
    <string name="bearing">Bearing</string>
    <string name="website">Website</string>
    <string name="wiki">Wikipedia</string>
    <string name="wait">Please wait, query still running</string>
    <string name="no_website">No website</string>
    <string name="no_wiki">No wikipedia page</string>
    <string name="metar">METAR</string>
    <string name="time">Time : </string>
    <string name="temperature">Temperature : </string>
    <string name="dewpoint">Dewpoint : </string>
    <string name="humidity">Humidity : </string>
    <string name="pressure">Pressure : </string>
    <string name="winds">Winds : </string>
    <string name="visibility">Visibility : </string>
    <string name="taf">TAF</string>
    <string name="altimeter">Altimeter : </string>
    <string name="probability">Probability : </string>
    <string name="type">Type : </string>
    <string name="rules">Flight rules : </string>
    <string name="other">Other : </string>
    <string name="summary">Summary : </string>
    <string name="clouds">Clouds : </string>
    <string name="from">From : </string>
    <string name="to">To : </string>
    <string name="no_clouds">No clouds</string>
    <string name="more_info">Internet resources</string>
</resources>